3.0.0
------
- Re-built reporting engine to allow for user-created reporting formats
- Database specification and .rc file specification can now be either file names or full path specifications
- Can now send output to JSON file

2.2.11
------
- Fix SMTP connection bug for some email services (Issue #129)

2.2.10
------
- Try again to fix obscure parsing bug when job messages contain quotes (Issue #126)

2.2.9
-----
- Fix obscure parsing bug when job messages contain quotes (Issue #126)

2.2.8
-----
- Properly handle reports where Duplicati version is not parsed from emails (Issue #123)
- Added [incoming]unreadonly option to only process unread messages. Will dramatically speed up processing. (Issue #124)

2.2.7
-----
- Properly parse "Log data" field, newly introduced in Duplicati circa November 2018 (Issue #112)
- Parse JSON-formatted emails from Duplicati job runs (Issue #113)
- Added "Duplicati version" field option to report. Can be helpful in discovering when one of your systems is behind in Duplicati updates (Issue #114)
- Added -F option. Same as -f, but also sends resulting output file as an attachment to the email. (Issue #115)
- Updated database schema, now on version 1.0.3. Program will automaticaly upgrade older DB versions to the new format.
- Fixed weird .rc file version numbering system. (Issue #120)
- Added Duplicati version column to "Last Seen" report table (Issue #121)

2.2.6
-----
- Enable setting emails to read/seen after processing - IMAP only (Issue #111)

2.2.5
-----
- Fix POP3 headers to convert them to IMAP style for processing (Issue #105)
- Fix several stupid spelling errors (Issue #106 & others)
- Fix issue where POP3 server would fail keepalive check due to bad comparison of return from server.noop() call (Issue #107)
- Updated documents to include advice for setting POP3 "Leave messages on servr" option (Issue #107)
- Option to mask sensitive data from log files: [main] masksensitive (Issue #109)